include/zynum/blas/blas.h

typedef int32_t zynum_blas_int;
typedef struct {
    float real;
    float imag;
} zynum_blas_complex_float;
typedef struct {
    double real;
    double imag;
} zynum_blas_complex_double;
void ssymv_(const char *u, const zynum_blas_int *n, const float *alpha, const float *a, const zynum_blas_int *lda, const float *x, const zynum_blas_int *incx, const float *beta, float *y, const zynum_blas_int *incy);
void dsymv_(const char *u, const zynum_blas_int *n, const double *alpha, const double *a, const zynum_blas_int *lda, const double *x, const zynum_blas_int *incx, const double *beta, double *y, const zynum_blas_int *incy);
void chemv_(const char *u, const zynum_blas_int *n, const zynum_blas_complex_float *alpha, const zynum_blas_complex_float *a, const zynum_blas_int *lda, const zynum_blas_complex_float *x, const zynum_blas_int *incx, const zynum_blas_complex_float *beta, zynum_blas_complex_float *y, const zynum_blas_int *incy);
void zhemv_(const char *u, const zynum_blas_int *n, const zynum_blas_complex_double *alpha, const zynum_blas_complex_double *a, const zynum_blas_int *lda, const zynum_blas_complex_double *x, const zynum_blas_int *incx, const zynum_blas_complex_double *beta, zynum_blas_complex_double *y, const zynum_blas_int *incy);
void ssbmv_(const char *u, const zynum_blas_int *n, const zynum_blas_int *k, const float *alpha, const float *a, const zynum_blas_int *lda, const float *x, const zynum_blas_int *incx, const float *beta, float *y, const zynum_blas_int *incy);
void dsbmv_(const char *u, const zynum_blas_int *n, const zynum_blas_int *k, const double *alpha, const double *a, const zynum_blas_int *lda, const double *x, const zynum_blas_int *incx, const double *beta, double *y, const zynum_blas_int *incy);
void chbmv_(const char *u, const zynum_blas_int *n, const zynum_blas_int *k, const zynum_blas_complex_float *alpha, const zynum_blas_complex_float *a, const zynum_blas_int *lda, const zynum_blas_complex_float *x, const zynum_blas_int *incx, const zynum_blas_complex_float *beta, zynum_blas_complex_float *y, const zynum_blas_int *incy);
void zhbmv_(const char *u, const zynum_blas_int *n, const zynum_blas_int *k, const zynum_blas_complex_double *alpha, const zynum_blas_complex_double *a, const zynum_blas_int *lda, const zynum_blas_complex_double *x, const zynum_blas_int *incx, const zynum_blas_complex_double *beta, zynum_blas_complex_double *y, const zynum_blas_int *incy);
void sspmv_(const char *u, const zynum_blas_int *n, const float *alpha, const float *ap, const float *x, const zynum_blas_int *incx, const float *beta, float *y, const zynum_blas_int *incy);
void dspmv_(const char *u, const zynum_blas_int *n, const double *alpha, const double *ap, const double *x, const zynum_blas_int *incx, const double *beta, double *y, const zynum_blas_int *incy);
void chpmv_(const char *u, const zynum_blas_int *n, const zynum_blas_complex_float *alpha, const zynum_blas_complex_float *ap, const zynum_blas_complex_float *x, const zynum_blas_int *incx, const zynum_blas_complex_float *beta, zynum_blas_complex_float *y, const zynum_blas_int *incy);
void zhpmv_(const char *u, const zynum_blas_int *n, const zynum_blas_complex_double *alpha, const zynum_blas_complex_double *ap, const zynum_blas_complex_double *x, const zynum_blas_int *incx, const zynum_blas_complex_double *beta, zynum_blas_complex_double *y, const zynum_blas_int *incy);
void strmv_(const char *u, const char *t, const char *d, const zynum_blas_int *n, const float *a, const zynum_blas_int *lda, float *x, const zynum_blas_int *incx);
void dtrmv_(const char *u, const char *t, const char *d, const zynum_blas_int *n, const double *a, const zynum_blas_int *lda, double *x, const zynum_blas_int *incx);
void ctrmv_(const char *u, const char *t, const char *d, const zynum_blas_int *n, const zynum_blas_complex_float *a, const zynum_blas_int *lda, zynum_blas_complex_float *x, const zynum_blas_int *incx);
void ztrmv_(const char *u, const char *t, const char *d, const zynum_blas_int *n, const zynum_blas_complex_double *a, const zynum_blas_int *lda, zynum_blas_complex_double *x, const zynum_blas_int *incx);
void stbmv_(const char *u, const char *t, const char *d, const zynum_blas_int *n, const zynum_blas_int *k, const float *a, const zynum_blas_int *lda, float *x, const zynum_blas_int *incx);