include/zynum/blas/blas.f90


    subroutine ssymv( &
        u, n, alpha, a, lda, x, &
        incx, beta, y, incy &
    ) bind(C, name="ssymv_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: u
      integer(blasint), intent(in) :: n
      real(c_float), intent(in) :: alpha
      real(c_float), intent(in) :: a(*)
      integer(blasint), intent(in) :: lda
      real(c_float), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      real(c_float), intent(in) :: beta
      real(c_float), intent(inout) :: y(*)
      integer(blasint), intent(in) :: incy
    end subroutine ssymv

    subroutine dsymv( &
        u, n, alpha, a, lda, x, &
        incx, beta, y, incy &
    ) bind(C, name="dsymv_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: u
      integer(blasint), intent(in) :: n
      real(c_double), intent(in) :: alpha
      real(c_double), intent(in) :: a(*)
      integer(blasint), intent(in) :: lda
      real(c_double), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      real(c_double), intent(in) :: beta
      real(c_double), intent(inout) :: y(*)
      integer(blasint), intent(in) :: incy
    end subroutine dsymv

    subroutine chemv( &
        u, n, alpha, a, lda, x, &
        incx, beta, y, incy &
    ) bind(C, name="chemv_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: u
      integer(blasint), intent(in) :: n
      complex(blas_complex_float), intent(in) :: alpha
      complex(blas_complex_float), intent(in) :: a(*)
      integer(blasint), intent(in) :: lda
      complex(blas_complex_float), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      complex(blas_complex_float), intent(in) :: beta
      complex(blas_complex_float), intent(inout) :: y(*)
      integer(blasint), intent(in) :: incy
    end subroutine chemv

    subroutine zhemv( &
        u, n, alpha, a, lda, x, &
        incx, beta, y, incy &
    ) bind(C, name="zhemv_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: u
      integer(blasint), intent(in) :: n
      complex(blas_complex_double), intent(in) :: alpha
      complex(blas_complex_double), intent(in) :: a(*)
      integer(blasint), intent(in) :: lda
      complex(blas_complex_double), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      complex(blas_complex_double), intent(in) :: beta
      complex(blas_complex_double), intent(inout) :: y(*)
      integer(blasint), intent(in) :: incy
    end subroutine zhemv

    subroutine ssbmv( &
        u, n, k, alpha, a, lda, &
        x, incx, beta, y, incy &
    ) bind(C, name="ssbmv_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: u
      integer(blasint), intent(in) :: n
      integer(blasint), intent(in) :: k
      real(c_float), intent(in) :: alpha
      real(c_float), intent(in) :: a(*)
      integer(blasint), intent(in) :: lda
      real(c_float), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      real(c_float), intent(in) :: beta
      real(c_float), intent(inout) :: y(*)
      integer(blasint), intent(in) :: incy
    end subroutine ssbmv

    subroutine dsbmv( &
        u, n, k, alpha, a, lda, &
        x, incx, beta, y, incy &
    ) bind(C, name="dsbmv_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: u
      integer(blasint), intent(in) :: n
      integer(blasint), intent(in) :: k
      real(c_double), intent(in) :: alpha
      real(c_double), intent(in) :: a(*)
      integer(blasint), intent(in) :: lda
      real(c_double), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      real(c_double), intent(in) :: beta
      real(c_double), intent(inout) :: y(*)
      integer(blasint), intent(in) :: incy
    end subroutine dsbmv

    subroutine chbmv( &
        u, n, k, alpha, a, lda, &
        x, incx, beta, y, incy &
    ) bind(C, name="chbmv_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: u
      integer(blasint), intent(in) :: n
      integer(blasint), intent(in) :: k
      complex(blas_complex_float), intent(in) :: alpha
      complex(blas_complex_float), intent(in) :: a(*)
      integer(blasint), intent(in) :: lda
      complex(blas_complex_float), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      complex(blas_complex_float), intent(in) :: beta
      complex(blas_complex_float), intent(inout) :: y(*)
      integer(blasint), intent(in) :: incy
    end subroutine chbmv

    subroutine zhbmv( &
        u, n, k, alpha, a, lda, &
        x, incx, beta, y, incy &
    ) bind(C, name="zhbmv_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: u
      integer(blasint), intent(in) :: n
      integer(blasint), intent(in) :: k
      complex(blas_complex_double), intent(in) :: alpha
      complex(blas_complex_double), intent(in) :: a(*)
      integer(blasint), intent(in) :: lda
      complex(blas_complex_double), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      complex(blas_complex_double), intent(in) :: beta
      complex(blas_complex_double), intent(inout) :: y(*)
      integer(blasint), intent(in) :: incy
    end subroutine zhbmv

    subroutine sspmv( &
        u, n, alpha, ap, x, incx, &
        beta, y, incy &
    ) bind(C, name="sspmv_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: u
      integer(blasint), intent(in) :: n
      real(c_float), intent(in) :: alpha
      real(c_float), intent(in) :: ap(*)
      real(c_float), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      real(c_float), intent(in) :: beta
      real(c_float), intent(inout) :: y(*)
      integer(blasint), intent(in) :: incy
    end subroutine sspmv

    subroutine dspmv( &
        u, n, alpha, ap, x, incx, &
        beta, y, incy &
    ) bind(C, name="dspmv_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: u
      integer(blasint), intent(in) :: n
      real(c_double), intent(in) :: alpha
      real(c_double), intent(in) :: ap(*)
      real(c_double), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      real(c_double), intent(in) :: beta
      real(c_double), intent(inout) :: y(*)
      integer(blasint), intent(in) :: incy
    end subroutine dspmv

    subroutine chpmv( &
        u, n, alpha, ap, x, incx, &
        beta, y, incy &
    ) bind(C, name="chpmv_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: u
      integer(blasint), intent(in) :: n
      complex(blas_complex_float), intent(in) :: alpha
      complex(blas_complex_float), intent(in) :: ap(*)
      complex(blas_complex_float), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      complex(blas_complex_float), intent(in) :: beta
      complex(blas_complex_float), intent(inout) :: y(*)
      integer(blasint), intent(in) :: incy
    end subroutine chpmv

    subroutine zhpmv( &
        u, n, alpha, ap, x, incx, &
        beta, y, incy &
    ) bind(C, name="zhpmv_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: u
      integer(blasint), intent(in) :: n
      complex(blas_complex_double), intent(in) :: alpha
      complex(blas_complex_double), intent(in) :: ap(*)
      complex(blas_complex_double), intent(in) :: x(*)
      integer(blasint), intent(in) :: incx
      complex(blas_complex_double), intent(in) :: beta
      complex(blas_complex_double), intent(inout) :: y(*)
      integer(blasint), intent(in) :: incy
    end subroutine zhpmv

    subroutine strmv( &
        u, t, d, n, a, lda, &
        x, incx &
    ) bind(C, name="strmv_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: u
      character(kind=c_char), intent(in) :: t
      character(kind=c_char), intent(in) :: d
      integer(blasint), intent(in) :: n
      real(c_float), intent(in) :: a(*)
      integer(blasint), intent(in) :: lda
      real(c_float), intent(inout) :: x(*)
      integer(blasint), intent(in) :: incx
    end subroutine strmv

    subroutine dtrmv( &
        u, t, d, n, a, lda, &
        x, incx &
    ) bind(C, name="dtrmv_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: u
      character(kind=c_char), intent(in) :: t
      character(kind=c_char), intent(in) :: d
      integer(blasint), intent(in) :: n
      real(c_double), intent(in) :: a(*)
      integer(blasint), intent(in) :: lda
      real(c_double), intent(inout) :: x(*)
      integer(blasint), intent(in) :: incx
    end subroutine dtrmv

    subroutine ctrmv( &
        u, t, d, n, a, lda, &
        x, incx &
    ) bind(C, name="ctrmv_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: u
      character(kind=c_char), intent(in) :: t
      character(kind=c_char), intent(in) :: d
      integer(blasint), intent(in) :: n
      complex(blas_complex_float), intent(in) :: a(*)
      integer(blasint), intent(in) :: lda
      complex(blas_complex_float), intent(inout) :: x(*)
      integer(blasint), intent(in) :: incx
    end subroutine ctrmv

    subroutine ztrmv( &
        u, t, d, n, a, lda, &
        x, incx &
    ) bind(C, name="ztrmv_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: u
      character(kind=c_char), intent(in) :: t
      character(kind=c_char), intent(in) :: d
      integer(blasint), intent(in) :: n
      complex(blas_complex_double), intent(in) :: a(*)
      integer(blasint), intent(in) :: lda
      complex(blas_complex_double), intent(inout) :: x(*)
      integer(blasint), intent(in) :: incx
    end subroutine ztrmv

    subroutine stbmv( &
        u, t, d, n, k, a, &
        lda, x, incx &
    ) bind(C, name="stbmv_")
      import :: c_int, c_float, c_double, c_char
      import :: blasint, blas_complex_float, blas_complex_double
      character(kind=c_char), intent(in) :: u
      character(kind=c_char), intent(in) :: t
      character(kind=c_char), intent(in) :: d
      integer(blasint), intent(in) :: n
      integer(blasint), intent(in) :: k
      real(c_float), intent(in) :: a(*)
      integer(blasint), intent(in) :: lda
      real(c_float), intent(inout) :: x(*)
      integer(blasint), intent(in) :: incx
    end subroutine stbmv
